# slides

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: index_curator.py  nl_to_dsl.py  qa_agent.py
agents/prompts/: index_curation.txt  nl_to_dsl.txt  qa_inspection.txt
docs/: architecture.md
docs/examples/: sample.sdsl
docs/examples/seeds/: bain_ai_roi.sdsl  bain_b2b_pricing.sdsl  bain_brand_positioning.sdsl  bain_pipe_investment.sdsl  bain_retail_transformation.sdsl  bain_saas_growth.sdsl  bain_tech_diligence.sdsl  bcg_ai_strategy.sdsl  bcg_api_platform.sdsl  bcg_digital_monetization.sdsl  bcg_dtc_strategy.sdsl  bcg_financial_diligence.sdsl  bcg_gtm_strategy.sdsl  (+13 more)
results/: qa_benchmark_summary.md
scripts/: analyze_benchmark.py  benchmark_qa.py  fetch_consulting_pdfs.py  ingest_deck.py  run_pipeline.py  sample_benchmark.py  seed_index.py  seed_pdfs.py
skills/: chunk_slide.py  dsl_parse.py  dsl_serialize.py  embed.py  format_convert.py  index_search.py  render_pptx.py  template_analyze.py
specs/: AGENT_SPEC.md  DSL_SPEC.md  INDEX_SPEC.md  RENDERER_SPEC.md
src/dsl/: models.py  parser.py  serializer.py
src/index/: chunker.py  embeddings.py  retriever.py  store.py
src/renderer/: format_plugins.py  pptx_renderer.py
src/requirements/: parser.py  validator.py
src/services/: feedback.py  orchestrator.py
templates/: .gitkeep
tests/: test_agents.py  test_chunker.py  test_index.py  test_nl_to_dsl.py  test_orchestrator.py  test_parser.py  test_renderer.py  test_requirements.py  test_serializer.py
