[project]
name = "slideforge"
version = "0.1.0"
description = "Agentic slide generation with a domain-specific language and semantic design index"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "anthropic>=0.39",
    "python-pptx>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "pre-commit",
]
embeddings = [
    "sentence-transformers>=2.2",
]
all = [
    "sentence-transformers>=2.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
